--- a/index.html
+++ b/index.html
@@ -399,5 +399,6 @@
     <!-- Backtotop End -->
 
     <script src="dist/js/script.js"></script>
+    <script src="./dist/js/script.js"></script>
   </body>
 </html>
