--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/dist/css/final.css" rel="stylesheet" />
+    <link href="./dist/css/final.css" rel="stylesheet" />
     <link rel="stylesheet" href="./dist/css/final.css" />
     <script>
       if (localStorage.theme === "dark" || (!("theme" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
@@ -399,6 +399,5 @@
     <!-- Backtotop End -->
 
     <script src="dist/js/script.js"></script>
-    <script src="./dist/js/script.js"></script>
   </body>
 </html>
